ciurier overflow fix

--- a/src/styles/modules/couriers/_couriers.scss
+++ b/src/styles/modules/couriers/_couriers.scss
@@ -1,7 +1,7 @@
 .couriers {
   padding-top: vw($mobile, 40px);
   @media screen and (max-width: $desktop - 1) {
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   @media screen and (min-width: $desktop) {
