--- a/src/styles/modules/kitchen/_kitchen.scss
+++ b/src/styles/modules/kitchen/_kitchen.scss
@@ -1,3 +1,5 @@
 .kitchen {
   background-color: $purple;
+
+  padding-top: vw($mobile, 50px);
 }
